Correct picture element spacing

--- a/projects/substack-post-copy/css/modules.css
+++ b/projects/substack-post-copy/css/modules.css
@@ -13,9 +13,13 @@
 	max-width: 40px;
 	border-radius: 50%;
 	overflow: hidden;
+	padding: 0;
+	margin-left: 15px;
+	margin-right: 5px;
 }
 
 picture {
+	padding: 15px;
 	max-width: 400px;
 }
 
