--- a/projects/substack-post-copy/css/style.css
+++ b/projects/substack-post-copy/css/style.css
@@ -31,7 +31,12 @@ h2 {
 }
 
 p {
-	padding: 15px;
+	padding: 0 15px;
+	padding-top: 15px;
+}
+
+p+p {
+	padding: 5px 15px;
 }
 
 a {
